--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Daily Reflection",
   "icons": [{
       "src": "mirror-reflection.ico",
-      "sizes": "256x256",
+      "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }],
   "start_url": ".",
