--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Reflection",
-  "name": "Daily Reflection",
+  "short_name": "rorreM",
+  "name": "Mirror | rorriM",
   "icons": [],
   "start_url": ".",
   "display": "fullscreen",
